# Lucena-Utilities

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
cmake/: LULBootstrap.cmake  LULMakeLibrary.cmake  LULPrecompiledHeader.cmake  LULSetupProject.cmake  LULUtils.cmake  Lucena-Utilities-config.cmake.in  lulConfig.hpp.in
docs/: CMakeLists.txt
include/Lucena-Utilities/: Lucena-Utilities.hpp  lulAny.hpp  lulAnyWrapper.hpp  lulBit.hpp  lulBitWrapper.hpp  lulCompilerFlags.hpp  lulConcurrencyTypes.hpp  lulConfig.hpp  lulEndian.hpp  lulFeatureSetup.hpp  lulFilesystemWrapper.hpp  lulIterator.hpp  lulMemoryTypes.hpp  lulMemoryWrapper.hpp  lulNetworkingWrapper.hpp  lulOptionalWrapper.hpp  lulPackaging.hpp  lulSpan.hpp  lulSpanWrapper.hpp  lulTime.hpp  lulTypeTraits.hpp  lulTypeTraitsWrapper.hpp  lulTypes.hpp  lulUtilities.hpp  lulVariant.hpp  lulVariantWrapper.hpp  lulVersion.hpp  lulVersionWrapper.hpp
include/Lucena-Utilities/_Prefix/: lulPCH_boost.hpp  lulPCH_gsl.hpp  lulPCH_std.hpp
include/Lucena-Utilities/details/: lulAny.hpp  lulBit.hpp  lulCompilerSetup.hpp  lulFilesystem.hpp  lulHelperIterator.hpp  lulHelperLocale.hpp  lulHelperMemory.hpp  lulHelperTuple.hpp  lulHelperTypeTraits.hpp  lulHelperUtility.hpp  lulLibrarySetup.hpp  lulObserverPtr.hpp  lulOptional.hpp  lulPlatformSetup.hpp  lulSpan.hpp  lulVariant.hpp  lulVisibility.hpp
licenses/: LICENSE.txt  bit_cast License.txt  libc++ License.txt
src/lul/: Lucena-Utilities.cpp  lulAny.cpp  lulConfig_priv.hpp  lulDirectoryIterator.cpp  lulFilesystemCommon.hpp  lulFilesystemOps.cpp  lulHelperIntrinsics.cpp  lulHelperLocale.cpp  lulOptional.cpp  lulTypes.cpp  lulUnicodeUtilities_priv.cpp  lulUnicodeUtilities_priv.hpp  lulUtilities.cpp  lulVariant.cpp
test/: CMakeLists.txt  luuConfig_priv.hpp  luuTest.cpp
